convert CampaignURL to use URI vs. URL (related to URL.equals doing a DNS resolve which URI does not)
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@9376 ef53c05b-3124-4d59-ae7d-fe3273f42be7